<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>WidgetBaseMeasure</class>
 <widget class="QWidget" name="WidgetBaseMeasure">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>953</width>
    <height>650</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <family>微软雅黑</family>
    <pointsize>10</pointsize>
   </font>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="4,1,10">
   <item>
    <widget class="QGroupBox" name="groupBoxMessage">
     <property name="title">
      <string>测试基础信息</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0" rowspan="2">
       <widget class="QLabel" name="labelUnit">
        <property name="text">
         <string>单位：</string>
        </property>
       </widget>
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="labelDescription">
        <property name="text">
         <string>备注：</string>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="editUnit"/>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="labelMeasureType">
        <property name="text">
         <string>测试类型：</string>
        </property>
       </widget>
      </item>
      <item row="0" column="2">
       <widget class="QLabel" name="labelMeasureName">
        <property name="text">
         <string>测试名称：</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="editMeasureType"/>
      </item>
      <item row="3" column="1" colspan="3">
       <widget class="QTextEdit" name="editDescription"/>
      </item>
      <item row="0" column="3" rowspan="2">
       <widget class="QLineEdit" name="editMeasurerName"/>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="ButtonGroup" name="buttonGroup" native="true"/>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>测试列表</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QTableView" name="tableView"/>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ButtonGroup</class>
   <extends>QWidget</extends>
   <header>ButtonGroup.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
